--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,7 +24,11 @@ body {
   background: #838383;
 }
 
-@media screen and (max-width: 600px){
+.display-4 {
+  font-size: 52px;
+}
+
+@media screen and (max-width: 700px){
   .display-4 {
     font-size: 42px;
   }
