--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -34,6 +34,7 @@ $animationsMobile: Contact-slideDown Contact-slideRight Contact-slideUp Contact-
 
 .Contact_img {
   opacity: 0;
+  width: 64px;
 }
 
 // Desktop
