Cleaned up styles

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -72,8 +72,8 @@ $translation: 100%;
 }
 
 .About_inner {
-  margin-left: auto;
-  margin-right: auto;
+  //margin-left: auto;
+  //margin-right: auto;
   padding-left: 5%;
 }
 
