Replaced unnecessary timelines with gsap functions
- Added alt to about image
- The cursor is hidden on mobile devices
- Fixed incorrect comment in breakpoint scss

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -23,6 +23,6 @@ small {
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.link {
+.link--no-cursor {
   cursor: none;
 }
