Added contacts page
- Renamed global cursor link
- Added jsconfig to resolve '@' imports in VS Code
- Added animation attributes in data function to remove repition
- Fixed typo in comment in App component

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -23,6 +23,8 @@ small {
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.link--no-cursor {
+// Utility class that tells the cursor
+// to expand when the item is hovered over
+.cursor__link {
   cursor: none;
 }
