--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
 }
 
 * {
@@ -21,10 +22,4 @@ span,
 small {
   font-family: 'AvenirNextLTPro-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-// Utility class that tells the cursor
-// to expand when the item is hovered over
-.cursor__link {
-  cursor: none;
 }
