--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,9 +1,9 @@
 @font-face {
-  font-family: 'AvenirNextLTPro-Regular';
+  font-family: 'AvenirNext';
   src: url(../assets/fonts/AvenirNextLTPro-Regular.otf);
 }
 
 @font-face {
-  font-family: 'AvenirNextLTPro-Bold';
+  font-family: 'AvenirNext-Bold';
   src: url(../assets/fonts/AvenirNextLTPro-Bold.otf);
 }
