--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -20,6 +20,6 @@ a,
 p,
 span,
 small {
-  font-family: 'AvenirNextLTPro-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  font-family: 'AvenirNext', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
