--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,4 +1,4 @@
-@import 'fonts';
+@import 'mixins/fonts';
 
 body {
   margin: 0;
@@ -8,18 +8,4 @@ body {
 
 * {
   box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-a,
-p,
-span,
-small {
-  font-family: 'AvenirNext', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
