--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,13 +1,22 @@
 @import 'mixins/fonts';
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+html {
+  // Prevents font scaling on iOS devices
+  // when it's rotated
+  -webkit-text-size-adjust: 100%;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
-}
-
-* {
-  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .no-overflow {
