--- a/src/scss/components/project-info.scss
+++ b/src/scss/components/project-info.scss
@@ -6,6 +6,10 @@
   @include font('AvenirNext');
 }
 
+[data-animate] {
+  opacity: 0;
+}
+
 .project-header {
   display: flex;
   flex-direction: column;
@@ -16,6 +20,7 @@
     text-align: center;
     font-size: 10vw;
     margin: 1.7em 0 0 0;
+    cursor: default;
     color: #353535;
 
     @include font('Montserrat');
@@ -100,7 +105,7 @@
       left: 0;
       bottom: 0;
       right: 0;
-      background-color: rgba(53, 53, 53, 0.2);
+      background-color: rgba(53, 53, 53, 0.25);
       transition: transform 0.2s ease-in-out;
     }
 
@@ -108,6 +113,49 @@
       &:hover::before {
         transform: scaleY(1);
       }
+    }
+  }
+}
+
+.all-projects-link {
+  margin-bottom: 5em;
+  text-align: center;
+
+  a {
+    color: #353535;
+    text-decoration: none;
+    position: relative;
+    font-size: 1em;
+    display: inline-block;
+    transition: transform 0.25s ease-in-out;
+
+    @include font('AvenirNext-Bold');
+
+    @include breakpoint(md) {
+      font-size: 1.3em;
+    }
+
+    @include breakpoint(lg) {
+      transform: translateX(5%) skew(-15deg);
+
+      &:hover {
+        transform: translateX(0) skew(0);
+        &::before {
+          transform: scaleX(0.5);
+        }
+      }
+    }
+
+    &::before {
+      content: '';
+      width: 100%;
+      height: 1px;
+      vertical-align: middle;
+      background-color: #000;
+      transition: inherit;
+      transform: scaleX(1);
+      position: absolute;
+      bottom: -4px;
     }
   }
 }
