--- a/src/scss/components/project-info.scss
+++ b/src/scss/components/project-info.scss
@@ -32,25 +32,42 @@
 }
 
 .project-image {
-  width: 100%;
+  // Setting padding-bottom, height, and width allows the
+  // image container to keeps it's size if there is no
+  // image loaded yet. This prevents content from shifting
+  // when the image is loaded
+  width: 90%;
   margin: 5% auto;
+  position: relative;
+  padding-bottom: 55%;
+  height: 0;
+  margin-bottom: 5em;
 
   @include breakpoint(sm) {
     width: 85%;
+    padding-bottom: 55%;
   }
 
   @include breakpoint(md) {
+    padding-bottom: 45%;
     width: 70%;
   }
 
   img {
     width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
   }
 }
 
 .project-info {
-  margin: 0 auto 5em auto;
+  margin: 0 auto 3em auto;
   width: 85%;
+
+  @include breakpoint(sm) {
+    margin: 0 auto 5em auto;
+  }
 
   @include breakpoint(lg) {
     width: 75%;
