--- a/src/scss/components/project-info.scss
+++ b/src/scss/components/project-info.scss
@@ -166,9 +166,9 @@
     &::before {
       content: '';
       width: 100%;
-      height: 1px;
+      height: 2px;
       vertical-align: middle;
-      background-color: #000;
+      background-color: rgba(53, 53, 53, 0.25);
       transition: inherit;
       transform: scaleX(1);
       position: absolute;
