--- a/src/scss/components/project-info.scss
+++ b/src/scss/components/project-info.scss
@@ -57,7 +57,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    object-fit: cover;
+    object-fit: contain;
   }
 }
 
@@ -80,7 +80,7 @@
   .heading {
     color: #353535;
     margin: 0 0 1em 0;
-    font-size: 1em;
+    font-size: 1.3em;
     text-align: center;
 
     @include font('AvenirNext-Bold');
@@ -107,7 +107,7 @@
 
   a {
     text-align: center;
-    margin-top: 1em;
+    margin: 1em auto 0 auto;
     text-decoration: none;
     color: #5a5c63;
     position: relative;
@@ -153,10 +153,10 @@
     }
 
     @include breakpoint(lg) {
-      transform: translateX(5%) skew(-15deg);
+      transform: skew(-15deg);
 
       &:hover {
-        transform: translateX(0) skew(0);
+        transform: skew(0);
         &::before {
           transform: scaleX(0.5);
         }
