--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -15,28 +15,24 @@
 .content__text {
   margin: 0;
   overflow: hidden;
-  width: 100%;
 }
 
 .content__text--name {
-  text-align: start;
-  font-size: 9vw;
-}
+  font-size: 10vw;
+  letter-spacing: 2px;
+  color: #353535;
 
-.content__text--message {
-  text-align: center;
-  font-style: italic;
+  @include font('AvenirNext-Bold');
 }
 
 .content__text--contact {
   position: absolute;
-  text-align: center;
   bottom: 0;
   margin-bottom: 1em;
-  color: black;
   text-decoration: none;
-}
 
-.content__item {
-  margin: 0 4.3em;
+  &:active,
+  &:visited {
+    color: #000;
+  }
 }
