--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -1,7 +1,7 @@
 @import '../mixins/breakpoints';
 @import '../mixins/fonts';
 
-nav {
+.navbar {
   position: absolute;
   display: grid;
   width: 100%;
