--- a/src/scss/components/contact.scss
+++ b/src/scss/components/contact.scss
@@ -42,6 +42,11 @@
     width: 2.5em;
     height: 2.5em;
   }
+
+  @include breakpoint(xl) {
+    width: 3em;
+    height: 3em;
+  }
 }
 
 .circle--inner {
@@ -55,6 +60,11 @@
     width: 2em;
     height: 2em;
   }
+
+  @include breakpoint(xl) {
+    width: 2.5em;
+    height: 2.5em;
+  }
 }
 
 .contact__row-wrapper {
@@ -62,7 +72,7 @@
 }
 
 .contact__link {
-  font-size: 2.5em;
+  font-size: 3em;
   margin: 0;
   color: #000;
   text-decoration: none;
@@ -71,20 +81,23 @@
     -webkit-text-stroke: 1px #000;
     transition: color 0.5s ease-in-out;
     color: transparent;
-    text-decoration: none;
   }
 
   @include font('AvenirNext-Bold');
 
-  @include breakpoint(sm) {
-    font-size: 2.3em;
-  }
+  // @include breakpoint(sm) {
+  //   font-size: 2.3em;
+  // }
 
-  @include breakpoint(md) {
-    font-size: 2.3em;
-  }
+  // @include breakpoint(md) {
+  //   font-size: 2.8em;
+  // }
 
   @include breakpoint(lg) {
     font-size: 4em;
+  }
+
+  @include breakpoint(xl) {
+    font-size: 5.5em;
   }
 }
