--- a/src/scss/components/project-info.scss
+++ b/src/scss/components/project-info.scss
@@ -20,7 +20,7 @@
     font-size: 10vw;
     margin: 1.7em 0 0 0;
     cursor: default;
-    color: #353535;
+    color: var(--heading-color);
 
     @include font('Montserrat');
 
@@ -77,7 +77,7 @@
   }
 
   .heading {
-    color: #353535;
+    color: var(--heading-color);
     margin: 0 0 1em 0;
     font-size: 1.3em;
     text-align: center;
@@ -91,7 +91,7 @@
 
   .details {
     font-size: 1em;
-    color: #5a5c63;
+    color: var(--text-color);
     line-height: 188%;
   }
 }
@@ -108,7 +108,7 @@
     text-align: center;
     margin: 1em auto 0 auto;
     text-decoration: none;
-    color: #5a5c63;
+    color: var(--text-color);
     position: relative;
     font-size: 1em;
 
@@ -138,7 +138,7 @@
   text-align: center;
 
   a {
-    color: #353535;
+    color: var(--heading-color);
     text-decoration: none;
     position: relative;
     font-size: 1em;
