--- a/src/scss/mixins/_fonts.scss
+++ b/src/scss/mixins/_fonts.scss
@@ -13,6 +13,5 @@
 // Helper mixin so default fonts don't need to
 // be specified all the time
 @mixin font($font) {
-  font-family: $font, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: $font, Arial, Helvetica, sans-serif;
 }
