--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -53,7 +53,7 @@ section {
 }
 
 .content__about-header {
-  font-size: 2em;
+  font-size: 1.5em;
   margin: 0;
   color: var(--heading-color);
 
@@ -66,10 +66,11 @@ section {
 
 .content__about-text {
   font-size: 0.9em;
-  line-height: 1.8em;
+  line-height: 1.8;
+  margin-bottom: 0;
   color: var(--text-color);
 
-  @include breakpoint(md) {
+  @include breakpoint(lg) {
     font-size: 1em;
   }
 }
