--- a/src/scss/mixins/_breakpoints.scss
+++ b/src/scss/mixins/_breakpoints.scss
@@ -1,5 +1,5 @@
 // NOTE: (min-width: n) queries screens with width >= n
-// NOTE: (max-width: n) queries screen with width < n
+// NOTE: (max-width: n) queries screens with width < n
 
 // prettier-ignore
 @mixin breakpoint($size) {
