--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Martel:wght@300;400&display=swap');
 @import './variables';
 
 html {
@@ -10,7 +11,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Archivo', Arial, Helvetica, sans-serif;
+  font-family: 'Martel', Arial, Helvetica, sans-serif;
   background-color: $bg-color;
   color: $text-color;
 }
