Massive style overhaul
This commit changes the style of the site. Originally, a design
was planned but that was scrapped for a new design that includes
a much simplier layout.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,10 @@
-$bg-color: hsl(273, 100%, 10%);
-$text-color: hsl(273, 100%, 94%);
+:root {
+  // Using a CSS var instead of an SCSS var here
+  // so that the color can be changed easily in the
+  // dev console
+  --hue: 33deg;
+}
+
+$bg-color: hsl(var(--hue), 100%, 15%);
+$text-color: hsl(var(--hue), 100%, 90%);
 $ease-expo: cubic-bezier(0.16, 1, 0.3, 1);
