--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,13 +1,19 @@
-// @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@900&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Martel:wght@300;400;900&display=swap');
 @import './variables';
+
+@font-face {
+  // This is a variable font with the following axes:
+  // wght -> [100, 900]
+  // wdth -> [50, 150]
+  // slnt -> [-10, 0]
+  font-family: 'Anybody';
+  src: url('../assets/fonts/Anybody[slnt\,wdth\,wght].woff2') format('woff2-variations');
+}
 
 html,
 body {
   height: 100%;
   width: 100%;
+  transition: color 500ms ease-in-out, background-color 200ms ease-in-out;
 }
 
 html {
@@ -18,14 +24,15 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Martel', Arial, Helvetica, sans-serif;
   background-color: $bg-color;
   color: $text-color;
   overscroll-behavior-y: none;
 }
 
-h1 {
-  font-family: 'Martel Sans', Arial, Helvetica, sans-serif;
+h1,
+h2,
+p {
+  font-family: 'Anybody', Arial, Helvetica, sans-serif;
 }
 
 a {
