--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -1,4 +1,4 @@
-@import '../variables';
+@import '../partials/variables';
 
 .container {
   height: 100%;
@@ -49,7 +49,9 @@
 .link {
   font-size: 7vw;
   text-transform: uppercase;
-  margin: 0;
+  // Small amount of margin prevents the text from being
+  // slightly cut off on the left side of the container
+  margin: 0 0 0 8px;
   transition: font-variation-settings 500ms $ease-expo;
   font-variation-settings: 'wght' 600, 'wdth' 120, 'slnt' -10;
   cursor: pointer;
@@ -57,38 +59,4 @@
   &:hover {
     font-variation-settings: 'wght' 100, 'wdth' 150, 'slnt' 0;
   }
-}
-
-.curtain {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: $text-color;
-  align-items: center;
-  overflow: hidden;
-
-  &:nth-child(even) {
-    background-color: $bg-color;
-    h1 {
-      color: $text-color;
-    }
-  }
-}
-
-.curtain__inner {
-  color: $bg-color;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.curtain__text {
-  font-size: 10vw;
-  font-variation-settings: 'wght' 600, 'wdth' 100, 'slnt' 0;
-  margin: 0 1em;
-  user-select: none;
 }
