Clean up route transitions and add about section content
- Added a Vuex store to keep track of route transitions
- Added definitions for router functions for better auto-complete
- Added new fonts

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,7 +6,31 @@
   // wdth -> [50, 150]
   // slnt -> [-10, 0]
   font-family: 'Anybody';
-  src: url('../assets/fonts/Anybody[slnt\,wdth\,wght].woff2') format('woff2-variations');
+  src: url('../assets/fonts/Anybody.woff2') format('woff2-variations');
+}
+
+@font-face {
+  // This is a variable font with the following axes:
+  // wght -> [100, 900]
+  // opsz -> [10, 100]
+  font-family: 'Imbue';
+  src: url('../assets/fonts/Imbue.ttf') format('truetype');
+}
+
+@font-face {
+  // This is a variable font with the following axes:
+  // wght -> [100, 900]
+  // slnt -> [-12, 0]
+  font-family: 'Epilogue';
+  src: url('../assets/fonts/Epilogue.woff2') format('woff2-variations');
+}
+
+@font-face {
+  // This is a variable font with the following axes:
+  // wght -> [100, 900]
+  // slnt -> [-12, 0]
+  font-family: 'Epilogue-Italic';
+  src: url('../assets/fonts/Epilogue-Italic.woff2') format('woff2-variations');
 }
 
 *::selection {
